components/core/src/clp_s/search/sql/generated/SqlParser.cpp

// Generated from Sql.g4 by ANTLR 4.13.2


#include "SqlVisitor.h"

#include "SqlParser.h"


using namespace antlrcpp;
using namespace clp_s::search::sql::generated;

using namespace antlr4;

namespace {

struct SqlParserStaticData final {
  SqlParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SqlParserStaticData(const SqlParserStaticData&) = delete;
  SqlParserStaticData(SqlParserStaticData&&) = delete;
  SqlParserStaticData& operator=(const SqlParserStaticData&) = delete;
  SqlParserStaticData& operator=(SqlParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sqlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<SqlParserStaticData> sqlParserStaticData = nullptr;

void sqlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sqlParserStaticData != nullptr) {
    return;
  }
#else
  assert(sqlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SqlParserStaticData>(
    std::vector<std::string>{
      "singleStatement", "statement", "query", "querySpecification", "setQuantifier", 
      "selectItem", "expression", "booleanExpression", "predicate", "valueExpression", 
      "primaryExpression", "qualifiedName", "identifier", "number", "string", 
      "booleanValue", "comparisonOperator", "nonReserved"
    },
    std::vector<std::string>{
      "", "','", "'('", "')'", "'.'", "'CLP_GET_INT'", "'CLP_GET_FLOAT'", 
      "'CLP_GET_STRING'", "'CLP_GET_BOOL'", "'CLP_GET_JSON_STRING'", "'CLP_WILDCARD_COLUMN'", 
      "'ALL'", "'AND'", "'ANY_VALUE'", "'ARBITRARY'", "'AS'", "'AVG'", "'BETWEEN'", 
      "'COUNT'", "'DATE'", "'DISTINCT'", "'FALSE'", "'FROM'", "'IN'", "'IS'", 
      "'LIKE'", "'LIMIT'", "'MAX'", "'MIN'", "'NOT'", "'NULL'", "'OR'", 
      "'SELECT'", "'SUM'", "'TIMESTAMP'", "'TRUE'", "'WHERE'", "'='", "", 
      "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "CLP_GET_INT", "CLP_GET_FLOAT", "CLP_GET_STRING", 
      "CLP_GET_BOOL", "CLP_GET_JSON_STRING", "CLP_WILDCARD_COLUMN", "ALL", 
      "AND", "ANY_VALUE", "ARBITRARY", "AS", "AVG", "BETWEEN", "COUNT", 
      "DATE", "DISTINCT", "FALSE", "FROM", "IN", "IS", "LIKE", "LIMIT", 
      "MAX", "MIN", "NOT", "NULL", "OR", "SELECT", "SUM", "TIMESTAMP", "TRUE", 
      "WHERE", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", "ASTERISK", 
      "SLASH", "PERCENT", "STRING", "INTEGER_VALUE", "DECIMAL_VALUE", "DOUBLE_VALUE", 
      "IDENTIFIER", "QUOTED_IDENTIFIER", "BACKQUOTED_IDENTIFIER", "SIMPLE_COMMENT", 
      "BRACKETED_COMMENT", "WS", "UNRECOGNIZED"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sqlParserStaticData = std::move(staticData);
}

}

SqlParser::SqlParser(TokenStream *input) : SqlParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SqlParser::SqlParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SqlParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sqlParserStaticData->atn, sqlParserStaticData->decisionToDFA, sqlParserStaticData->sharedContextCache, options);
}

SqlParser::~SqlParser() {
  delete _interpreter;
}

const atn::ATN& SqlParser::getATN() const {
  return *sqlParserStaticData->atn;
}

std::string SqlParser::getGrammarFileName() const {
  return "Sql.g4";
}

const std::vector<std::string>& SqlParser::getRuleNames() const {
  return sqlParserStaticData->ruleNames;
}

const dfa::Vocabulary& SqlParser::getVocabulary() const {
  return sqlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SqlParser::getSerializedATN() const {
  return sqlParserStaticData->serializedATN;
}


//----------------- SingleStatementContext ------------------------------------------------------------------

SqlParser::SingleStatementContext::SingleStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SqlParser::StatementContext* SqlParser::SingleStatementContext::statement() {
  return getRuleContext<SqlParser::StatementContext>(0);
}

tree::TerminalNode* SqlParser::SingleStatementContext::EOF() {
  return getToken(SqlParser::EOF, 0);
}


size_t SqlParser::SingleStatementContext::getRuleIndex() const {
  return SqlParser::RuleSingleStatement;
}


std::any SqlParser::SingleStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitSingleStatement(this);
  else
    return visitor->visitChildren(this);
}

SqlParser::SingleStatementContext* SqlParser::singleStatement() {
  SingleStatementContext *_localctx = _tracker.createInstance<SingleStatementContext>(_ctx, getState());
  enterRule(_localctx, 0, SqlParser::RuleSingleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    statement();
    setState(37);
    match(SqlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SqlParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SqlParser::StatementContext::getRuleIndex() const {
  return SqlParser::RuleStatement;
}

void SqlParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- StatementDefaultContext ------------------------------------------------------------------

SqlParser::QueryContext* SqlParser::StatementDefaultContext::query() {
  return getRuleContext<SqlParser::QueryContext>(0);
}

SqlParser::StatementDefaultContext::StatementDefaultContext(StatementContext *ctx) { copyFrom(ctx); }


std::any SqlParser::StatementDefaultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitStatementDefault(this);
  else
    return visitor->visitChildren(this);
}
SqlParser::StatementContext* SqlParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SqlParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<SqlParser::StatementDefaultContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(39);
    query();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QueryContext ------------------------------------------------------------------

SqlParser::QueryContext::QueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SqlParser::QuerySpecificationContext* SqlParser::QueryContext::querySpecification() {
  return getRuleContext<SqlParser::QuerySpecificationContext>(0);
}

tree::TerminalNode* SqlParser::QueryContext::LIMIT() {
  return getToken(SqlParser::LIMIT, 0);
}

tree::TerminalNode* SqlParser::QueryContext::INTEGER_VALUE() {
  return getToken(SqlParser::INTEGER_VALUE, 0);
}


size_t SqlParser::QueryContext::getRuleIndex() const {
  return SqlParser::RuleQuery;
}


std::any SqlParser::QueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitQuery(this);
  else
    return visitor->visitChildren(this);
}

SqlParser::QueryContext* SqlParser::query() {
  QueryContext *_localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
  enterRule(_localctx, 4, SqlParser::RuleQuery);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    querySpecification();
    setState(44);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SqlParser::LIMIT) {
      setState(42);
      match(SqlParser::LIMIT);
      setState(43);
      antlrcpp::downCast<QueryContext *>(_localctx)->limit = match(SqlParser::INTEGER_VALUE);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuerySpecificationContext ------------------------------------------------------------------

SqlParser::QuerySpecificationContext::QuerySpecificationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SqlParser::QuerySpecificationContext::SELECT() {
  return getToken(SqlParser::SELECT, 0);
}

std::vector<SqlParser::SelectItemContext *> SqlParser::QuerySpecificationContext::selectItem() {
  return getRuleContexts<SqlParser::SelectItemContext>();
}

SqlParser::SelectItemContext* SqlParser::QuerySpecificationContext::selectItem(size_t i) {
  return getRuleContext<SqlParser::SelectItemContext>(i);
}

SqlParser::SetQuantifierContext* SqlParser::QuerySpecificationContext::setQuantifier() {
  return getRuleContext<SqlParser::SetQuantifierContext>(0);
}

tree::TerminalNode* SqlParser::QuerySpecificationContext::FROM() {
  return getToken(SqlParser::FROM, 0);
}

tree::TerminalNode* SqlParser::QuerySpecificationContext::WHERE() {
  return getToken(SqlParser::WHERE, 0);
}

SqlParser::QualifiedNameContext* SqlParser::QuerySpecificationContext::qualifiedName() {
  return getRuleContext<SqlParser::QualifiedNameContext>(0);
}

SqlParser::BooleanExpressionContext* SqlParser::QuerySpecificationContext::booleanExpression() {
  return getRuleContext<SqlParser::BooleanExpressionContext>(0);
}


size_t SqlParser::QuerySpecificationContext::getRuleIndex() const {
  return SqlParser::RuleQuerySpecification;
}


std::any SqlParser::QuerySpecificationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitQuerySpecification(this);
  else
    return visitor->visitChildren(this);
}

SqlParser::QuerySpecificationContext* SqlParser::querySpecification() {
  QuerySpecificationContext *_localctx = _tracker.createInstance<QuerySpecificationContext>(_ctx, getState());
  enterRule(_localctx, 6, SqlParser::RuleQuerySpecification);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(SqlParser::SELECT);
    setState(48);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(47);
      setQuantifier();
      break;
    }

    default:
      break;
    }
    setState(50);
    selectItem();
    setState(55);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SqlParser::T__0) {
      setState(51);
      match(SqlParser::T__0);
      setState(52);
      selectItem();
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SqlParser::FROM) {
      setState(58);
      match(SqlParser::FROM);
      setState(59);
      antlrcpp::downCast<QuerySpecificationContext *>(_localctx)->tableName = qualifiedName();
    }
    setState(64);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SqlParser::WHERE) {
      setState(62);
      match(SqlParser::WHERE);
      setState(63);
      antlrcpp::downCast<QuerySpecificationContext *>(_localctx)->where = booleanExpression(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SetQuantifierContext ------------------------------------------------------------------

SqlParser::SetQuantifierContext::SetQuantifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SqlParser::SetQuantifierContext::DISTINCT() {
  return getToken(SqlParser::DISTINCT, 0);
}

tree::TerminalNode* SqlParser::SetQuantifierContext::ALL() {
  return getToken(SqlParser::ALL, 0);
}


size_t SqlParser::SetQuantifierContext::getRuleIndex() const {
  return SqlParser::RuleSetQuantifier;
}


std::any SqlParser::SetQuantifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitSetQuantifier(this);
  else
    return visitor->visitChildren(this);
}

SqlParser::SetQuantifierContext* SqlParser::setQuantifier() {
  SetQuantifierContext *_localctx = _tracker.createInstance<SetQuantifierContext>(_ctx, getState());
  enterRule(_localctx, 8, SqlParser::RuleSetQuantifier);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    _la = _input->LA(1);
    if (!(_la == SqlParser::ALL

    || _la == SqlParser::DISTINCT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectItemContext ------------------------------------------------------------------

SqlParser::SelectItemContext::SelectItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SqlParser::SelectItemContext::getRuleIndex() const {
  return SqlParser::RuleSelectItem;
}

void SqlParser::SelectItemContext::copyFrom(SelectItemContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SelectAllContext ------------------------------------------------------------------

tree::TerminalNode* SqlParser::SelectAllContext::ASTERISK() {
  return getToken(SqlParser::ASTERISK, 0);
}

SqlParser::SelectAllContext::SelectAllContext(SelectItemContext *ctx) { copyFrom(ctx); }


std::any SqlParser::SelectAllContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitSelectAll(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SelectSingleContext ------------------------------------------------------------------

SqlParser::ExpressionContext* SqlParser::SelectSingleContext::expression() {
  return getRuleContext<SqlParser::ExpressionContext>(0);
}

SqlParser::IdentifierContext* SqlParser::SelectSingleContext::identifier() {
  return getRuleContext<SqlParser::IdentifierContext>(0);
}

tree::TerminalNode* SqlParser::SelectSingleContext::AS() {
  return getToken(SqlParser::AS, 0);
}

SqlParser::SelectSingleContext::SelectSingleContext(SelectItemContext *ctx) { copyFrom(ctx); }


std::any SqlParser::SelectSingleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitSelectSingle(this);
  else
    return visitor->visitChildren(this);
}
SqlParser::SelectItemContext* SqlParser::selectItem() {
  SelectItemContext *_localctx = _tracker.createInstance<SelectItemContext>(_ctx, getState());
  enterRule(_localctx, 10, SqlParser::RuleSelectItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SqlParser::T__1:
      case SqlParser::CLP_GET_INT:
      case SqlParser::CLP_GET_FLOAT:
      case SqlParser::CLP_GET_STRING:
      case SqlParser::CLP_GET_BOOL:
      case SqlParser::CLP_GET_JSON_STRING:
      case SqlParser::CLP_WILDCARD_COLUMN:
      case SqlParser::ALL:
      case SqlParser::ANY_VALUE:
      case SqlParser::ARBITRARY:
      case SqlParser::AS:
      case SqlParser::AVG:
      case SqlParser::COUNT:
      case SqlParser::DATE:
      case SqlParser::DISTINCT:
      case SqlParser::FALSE:
      case SqlParser::LIMIT:
      case SqlParser::MAX:
      case SqlParser::MIN:
      case SqlParser::NOT:
      case SqlParser::NULL_:
      case SqlParser::SUM:
      case SqlParser::TIMESTAMP:
      case SqlParser::TRUE:
      case SqlParser::PLUS:
      case SqlParser::MINUS:
      case SqlParser::STRING:
      case SqlParser::INTEGER_VALUE:
      case SqlParser::DECIMAL_VALUE:
      case SqlParser::DOUBLE_VALUE:
      case SqlParser::IDENTIFIER:
      case SqlParser::QUOTED_IDENTIFIER:
      case SqlParser::BACKQUOTED_IDENTIFIER: {
        _localctx = _tracker.createInstance<SqlParser::SelectSingleContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(68);
        expression();
        setState(73);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
        case 1: {
          setState(70);
          _errHandler->sync(this);

          switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
          case 1: {
            setState(69);
            match(SqlParser::AS);
            break;
          }

          default:
            break;
          }
          setState(72);
          identifier();
          break;
        }

        default:
          break;
        }
        break;
      }

      case SqlParser::ASTERISK: {
        _localctx = _tracker.createInstance<SqlParser::SelectAllContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(75);
        match(SqlParser::ASTERISK);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

SqlParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SqlParser::BooleanExpressionContext* SqlParser::ExpressionContext::booleanExpression() {
  return getRuleContext<SqlParser::BooleanExpressionContext>(0);
}


size_t SqlParser::ExpressionContext::getRuleIndex() const {
  return SqlParser::RuleExpression;
}


std::any SqlParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

SqlParser::ExpressionContext* SqlParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 12, SqlParser::RuleExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    booleanExpression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BooleanExpressionContext ------------------------------------------------------------------

SqlParser::BooleanExpressionContext::BooleanExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SqlParser::BooleanExpressionContext::getRuleIndex() const {
  return SqlParser::RuleBooleanExpression;
}

void SqlParser::BooleanExpressionContext::copyFrom(BooleanExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- LogicalNotContext ------------------------------------------------------------------

tree::TerminalNode* SqlParser::LogicalNotContext::NOT() {
  return getToken(SqlParser::NOT, 0);
}

SqlParser::BooleanExpressionContext* SqlParser::LogicalNotContext::booleanExpression() {
  return getRuleContext<SqlParser::BooleanExpressionContext>(0);
}

SqlParser::LogicalNotContext::LogicalNotContext(BooleanExpressionContext *ctx) { copyFrom(ctx); }


std::any SqlParser::LogicalNotContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitLogicalNot(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PredicatedContext ------------------------------------------------------------------

SqlParser::ValueExpressionContext* SqlParser::PredicatedContext::valueExpression() {
  return getRuleContext<SqlParser::ValueExpressionContext>(0);
}

SqlParser::PredicateContext* SqlParser::PredicatedContext::predicate() {
  return getRuleContext<SqlParser::PredicateContext>(0);
}

SqlParser::PredicatedContext::PredicatedContext(BooleanExpressionContext *ctx) { copyFrom(ctx); }


std::any SqlParser::PredicatedContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitPredicated(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LogicalBinaryContext ------------------------------------------------------------------

std::vector<SqlParser::BooleanExpressionContext *> SqlParser::LogicalBinaryContext::booleanExpression() {
  return getRuleContexts<SqlParser::BooleanExpressionContext>();
}

SqlParser::BooleanExpressionContext* SqlParser::LogicalBinaryContext::booleanExpression(size_t i) {
  return getRuleContext<SqlParser::BooleanExpressionContext>(i);
}

tree::TerminalNode* SqlParser::LogicalBinaryContext::AND() {
  return getToken(SqlParser::AND, 0);
}

tree::TerminalNode* SqlParser::LogicalBinaryContext::OR() {
  return getToken(SqlParser::OR, 0);
}

SqlParser::LogicalBinaryContext::LogicalBinaryContext(BooleanExpressionContext *ctx) { copyFrom(ctx); }


std::any SqlParser::LogicalBinaryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SqlVisitor*>(visitor))
    return parserVisitor->visitLogicalBinary(this);
  else
    return visitor->visitChildren(this);
}

SqlParser::BooleanExpressionContext* SqlParser::booleanExpression() {
   return booleanExpression(0);
}
